set github token in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ on:
         default: "v0.0.0"
 
 permissions:
-  contents: read
+  contents: write
 
 env:
   RELEASE_TAG: "${{ inputs.tag }}"
@@ -20,4 +20,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Create draft release
+      env:
+        GH_TOKEN: ${{ github.token }}
       run: ./.github/workflows/create-release.sh
