--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,12 @@ charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+indent_style = space
+indent_size = 4
+# shfmt settings
+binary_next_line = true
+switch_case_indent = true
+space_redirects = true
 
 [*.{yml,md}]
 indent_style = space
